--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
     <div class="container">
       <div class="nav-bar">
         <h1>SBLH</h1>
-        <li>sa</li>
+        <a href="#"><li class="nav-bar-1">About Me</li></a>
+        <li class="nav-bar-1">Social</li>
+        <li class="nav-bar-1">My Teams</li>
+        <li class="nav-bar-1">History</li>
       </div>
       <div class="content">
-        <div class="content-v1">PEMUDA SEBELAH</div>
+        <p class="line-1 anim-typewriter">PEMUDA SEBELAH</p>
       </div>
     </div>
     <footer class="footer">
       <div class="footer_addr">
-        <h1 class="footer_logo">your footer</h1>
+        <h1 class="footer_logo">@footer</h1>
       </div>
     </footer>
   </body>
